# crypto-resnet-with-fhe

./: .gitignore  CMakeLists.txt  README.en.md  README.md  package-lock.json  package.json  tui.json
src/: activation.cpp  activation.h  avgpool.cpp  avgpool.h  conv.cpp  conv.h  downsample.cpp  downsample.h  fc.cpp  fc.h  fhe_context.cpp  fhe_context.h  main.cpp  packing.cpp  packing.h  resnet.cpp  resnet.h  utils.h  weight_loader.cpp  weight_loader.h
tools/: compute_rotations.cpp  depth_trace.cpp  depth_trace_resnet110.md  depth_trace_resnet20.md  depth_trace_resnet32.md  depth_trace_resnet56.md  param_check  param_check.cpp  params.md
weights/: gen_weights.cpp
